name:                duplo
version:             0.1.1.2
synopsis:            Frontend development build tool
description:         Intuitive, simple building blocks for building composable, completely self-managed web applications
license:             MIT
license-file:        LICENSE
author:              Kenneth Kan
maintainer:          ken@pixbi.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:              git
  location:          https://github.com/pixbi/duplo.git

executable duplo
  main-is:          Main.hs
  build-depends:    base ==4.7.*
                  , directory ==1.2.*
                  , executable-path ==0.0.*
                  , shake ==0.13.*
                  , text ==0.11.*
                  , filepath ==1.3.*
                  , aeson >=0.1
                  , bytestring ==0.10.*
                  , lens ==4.3.*
                  , fsnotify ==0.1.*
                  , system-fileio ==0.3.*
                  , system-filepath ==0.4.*
                  , MissingH ==1.2.*
                  , transformers ==0.3.*
                  , unordered-containers ==0.2.*
  hs-source-dirs:   src/
  default-language: Haskell2010
