name:                  duplo
version:               0.1.3.3
synopsis:              Frontend development build tool
description:           Intuitive, simple building blocks for building composable, completely self-managed web applications
license:               MIT
license-file:          LICENSE
author:                Kenneth Kan
maintainer:            kenhkan@gmail.com
category:              Web
build-type:            Simple
extra-source-files:    README.md
cabal-version:         >=1.10

source-repository head
  type:                git
  location:            https://github.com/pixbi/duplo.git

executable duplo
  main-is:            Duplo.hs
  build-depends:      base ==4.7.*
                    , directory ==1.2.*
                    , executable-path ==0.0.*
                    , shake ==0.13.*
                    , text ==0.11.*
                    , filepath ==1.3.*
                    , aeson >=0.1
                    , bytestring ==0.10.*
                    , lens ==4.3.*
                    , fsnotify ==0.1.*
                    , system-fileio ==0.3.*
                    , system-filepath ==0.4.*
                    , MissingH ==1.2.*
                    , transformers ==0.3.*
                    , unordered-containers ==0.2.*
                    , base64-bytestring ==1.0.*
                    , bytestring ==0.10.*
                    , filepather ==0.3.*
                    , containers ==0.5.*
                    , language-javascript ==0.5.*
                    , mtl ==2.1.*
  hs-source-dirs:     src/
  default-language:   Haskell2010
  default-extensions: OverloadedStrings

executable server
  main-is:            Server.hs
  build-depends:      base ==4.7.*
                    , mtl ==2.1.*
                    , wai ==3.0.*
                    , warp ==3.0.*
                    , http-types ==0.8.*
                    , utf8-string ==0.3.*
                    , directory ==1.2.*
                    , scotty ==0.9.*
                    , text ==0.11.*
                    , lens ==4.3.*
                    , filepath ==1.3.*
  hs-source-dirs:     src/
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
